fixed word wrapping in show view. added separator lines in user edit form

--- a/css/users/form.styl
+++ b/css/users/form.styl
@@ -13,19 +13,29 @@
   .list-label
     float:left;
     padding-right:0
+    line-height:43px
 
   .list-data
     display:block
-    float:left
     padding-left:10px
     border-left:1px solid #ccc
     
     input
       display:block
       width: 100%
+      margin:0
+      padding:0
 
     select
       max-width:150px
+
+    .separator
+      margin-left:-10px
+      display:block
+      padding-left:10px
+
+      &+.separator
+        border-top: 1px solid #ccc
 
   .list-item.transparent
     .list-label
